# dsv.01

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/saaicom/tcb/docuscanner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  docuscanner.cpp
app/src/main/java/saaicom/tcb/docuscanner/: DocumentRepository.kt  DriveRepository.kt  EditDocumentActivity.kt  FileActions.kt  MainActivity.kt  Scanner.kt  SignatureRepository.kt  ThumbnailRepository.kt  UserDataStore.kt
app/src/main/java/saaicom/tcb/docuscanner/models/: FileItem.kt
app/src/main/java/saaicom/tcb/docuscanner/opencv/: DocumentProcessor.kt
app/src/main/java/saaicom/tcb/docuscanner/screens/camera/: CameraScreen.kt
app/src/main/java/saaicom/tcb/docuscanner/screens/cloud/: CloudFilesScreen.kt
app/src/main/java/saaicom/tcb/docuscanner/screens/edit/: ScannedDocumentEditScreen.kt
app/src/main/java/saaicom/tcb/docuscanner/screens/files/: FilesScreen.kt
app/src/main/java/saaicom/tcb/docuscanner/screens/home/: HomeScreen.kt
app/src/main/java/saaicom/tcb/docuscanner/ui/: BottomMenu.kt
app/src/main/java/saaicom/tcb/docuscanner/utils/: BitmapUtils.kt  DocumentDetector.kt  FileHelpers.kt  FileUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/saaicom/tcb/docuscanner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/res/xml/: file_paths.xml
(+14 files in other folders)
